--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -4,9 +4,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Main">
-    <TextView
-        android:id="@+id/listing"
-        android:text="test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+	<ListView
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:id="@+id/listingsListView"
+		android:layout_gravity="center_vertical"
+		/>
 </LinearLayout>
