--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
-		<item name="android:navigationBarColor">@android:color/transparent</item>
+		<item name="android:colorPrimary">@color/primaryColor</item>
+		<item name="android:colorPrimaryDark">@color/primaryColorDark</item>
+		<item name="android:navigationBarColor">@color/primaryColor</item>
 	</style>
 </resources>
