--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<color name="primaryColor">#388e3c</color>
+	<color name="primaryColorDark">#2e7d32</color>
+	<color name="backgroundColor">#FFFFFF</color>
 
 	<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+		<item name="android:actionBarStyle">@style/ChillActionBar</item>
+		<item name="android:windowTranslucentStatus">true</item>
+		<item name="android:windowTranslucentNavigation">true</item>
+	</style>
+
+	<style name="ChillActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
+		<item name="android:background">@color/primaryColor</item>
 	</style>
 
 </resources>
