--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -18,6 +18,11 @@
 			android:layout_height="wrap_content"
 			android:orientation="vertical">
 
+            <ImageView
+                android:id="@+id/picture"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
 			<TextView
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
