--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -9,41 +9,46 @@
 		android:layout_gravity="center"
 		android:layout_width="fill_parent"
 		android:layout_marginBottom="10dp"
-		android:layout_height="200dp"
-		card_view:contentPadding="25dp"
+		android:layout_height="wrap_content"
 		card_view:cardCornerRadius="4dp">
 
-		<LinearLayout
+		<RelativeLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:layout_marginLeft="10dp"
 			android:orientation="vertical">
 
-            <ImageView
+			<ImageView
                 android:id="@+id/picture"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="fill_parent"
+				android:src="#ff927893"
+				android:layout_centerVertical="true"/>
 
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:textColor="#ff14933a"
-				android:textSize="30sp"
-				android:id="@+id/listingPrice"/>
-
-			<TextView
-				android:layout_width="wrap_content"
+			<LinearLayout
+				android:layout_width="fill_parent"
 				android:layout_height="wrap_content"
-				android:textColor="@android:color/black"
-				android:textSize="15sp"
-				android:id="@+id/listingName"/>
+				android:padding="15dp"
+				android:layout_toEndOf="@+id/picture"
+				android:orientation="vertical">
 
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:textColor="@android:color/darker_gray"
-				android:textSize="12sp"
-				android:id="@+id/listingURL"/>
-		</LinearLayout>
+				<TextView
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:textColor="#ff14933a"
+					android:textSize="30sp"
+					android:text="$600"
+					android:id="@+id/listingPrice"/>
+
+				<TextView
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:textColor="@android:color/black"
+					android:textSize="15sp"
+					android:text="iPhone apple smartphone fast shipping from ny"
+					android:id="@+id/listingName"/>
+			</LinearLayout>
+		</RelativeLayout>
 	</android.support.v7.widget.CardView>
 
 </LinearLayout>
